--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>I am Vicky Mwendwa</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit harum sapiente, perspiciatis repudiandae sit dolores ipsum voluptatem
+         ullam molestias, ut veniam alias excepturi voluptatibus officia architecto quae. Adipisci, doloribus ipsum.</p>
 </body>
 </html>
